# slubjsonlinkcheck

./: .cursorrules  .gitignore  LICENSE  README.md  beispiel.jsonl  beispiel.jsonld  linkcheck.py  pyproject.toml  technical.md
src/jsonlinkcheck/: __init__.py  main.py
