[project]
name = "slubjsonlinkcheck"
version = "0.2.0"
description = "Ein Tool zum Überprüfen und Bereinigen von URLs in JSON-Lines Dateien"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Thomas Baer", email = "thomas.baer@slub-dresden.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.9.1",
    "tqdm>=4.66.1",
    "aiofiles>=23.2.1",
]

[project.urls]
Homepage = "https://github.com/thomsbe/slubjsonlinkcheck"
Issues = "https://github.com/thomsbe/slubjsonlinkcheck/issues"

[project.scripts]
jsonlinkcheck = "jsonlinkcheck.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jsonlinkcheck"]
